--- a/corano/index-4.html
+++ b/corano/index-4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corano - Jewelry Shop eCommerce Bootstrap 5 Template</title>
+    <title>Jevoo - Jewelry Shop eCommerce Bootstrap 5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewelry Online Store</p>
+                                <p>Welcome to Jevoo Jewelry Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -94,7 +94,7 @@
                         <div class="col-lg-4">
                             <div class="logo text-center">
                                 <a href="index-4.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo">
                                 </a>
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                         <div class="mobile-main-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
@@ -1409,7 +1409,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Celebrity Daughter Opens Up About Having Her Eye Color Changed</a>
@@ -1427,7 +1427,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Children Left Home Alone For 4 Days In TV series Experiment</a>
@@ -1445,7 +1445,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Lotto Winner Offering Up Money To Any Man That Will Date Her</a>
@@ -1463,7 +1463,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">People are Willing Lie When Comes Money, According to Research</a>
@@ -1481,7 +1481,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2019 | <a href="#">Corano</a></p>
+                                        <p>25/03/2019 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">romantic Love Stories Of Hollywood’s Biggest Celebrities</a>
@@ -1902,7 +1902,7 @@
                             <div class="widget-title">
                                 <div class="widget-logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/logo.png" alt="brand logo">
+                                        <img src="assets/img/jevoo-bespoke.jpg" alt="brand logo">
                                     </a>
                                 </div>
                             </div>
@@ -1982,7 +1982,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2025 <b>Corano</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2025 <b>Jevoo</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
                         </div>
                     </div>
                 </div>
