--- a/corano/index-5.html
+++ b/corano/index-5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corano - Jewelry Shop eCommerce Bootstrap 5 Template</title>
+    <title>Jevoo - Jewelry Shop eCommerce Bootstrap 5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewelry Online Store</p>
+                                <p>Welcome to Jevoo Jewelry Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -84,7 +84,7 @@
                         <div class="col-lg-2">
                             <div class="logo">
                                 <a href="index-3.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo">
                                 </a>
                             </div>
                         </div>
@@ -260,7 +260,7 @@
                         <div class="mobile-main-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
@@ -2459,7 +2459,7 @@
                                             </div>
                                             <div class="group-item-desc">
                                                 <h5 class="group-product-name"><a href="product-details.html">
-                                                        corano top exclusive jewellry</a></h5>
+                                                        Jevoo top exclusive jewellry</a></h5>
                                                 <div class="price-box">
                                                     <span class="price-regular">$20.00</span>
                                                     <span class="price-old"><del>$30.00</del></span>
@@ -2668,7 +2668,7 @@
                             <div class="widget-title">
                                 <div class="widget-logo">
                                     <a href="index.html">
-                                        <img src="assets/img/logo/logo.png" alt="brand logo">
+                                        <img src="assets/img/jevoo-bespoke.jpg" alt="brand logo">
                                     </a>
                                 </div>
                             </div>
@@ -2748,7 +2748,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2025 <b>Corano</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2025 <b>Jevoo</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
                         </div>
                     </div>
                 </div>
