--- a/corano/index.html
+++ b/corano/index.html
@@ -1482,7 +1482,7 @@
                                             </div>
                                             <div class="group-item-desc">
                                                 <h5 class="group-product-name"><a href="product-details.html">
-                                                        corano top exclusive jewellry</a></h5>
+                                                        Jevoo top exclusive jewellry</a></h5>
                                                 <div class="price-box">
                                                     <span class="price-regular">$20.00</span>
                                                     <span class="price-old"><del>$30.00</del></span>
