--- a/corano/new-products.html
+++ b/corano/new-products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>New Products - Corano Jewelry Shop eCommerce Bootstrap 5 Template</title>
+    <title>New Products - Jevoo Jewelry Shop eCommerce Bootstrap 5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="assets/css/draggable-grid/style.css">
 
     <style>
-        /* Custom styles to integrate draggable grid with Corano template */
+        /* Custom styles to integrate draggable grid with Jevoo template */
         .draggable-grid-section {
             position: relative;
             min-height: 100vh;
@@ -276,7 +276,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewelry Online Store</p>
+                                <p>Welcome to Jevoo Jewelry Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -310,7 +310,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-3">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt="Brand Logo"></a>
+                                <a href="index.html"><img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo"></a>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -354,7 +354,7 @@
                 <div class="row align-items-center">
                     <div class="col-6">
                         <div class="mobile-logo">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt="Brand Logo"></a>
+                            <a href="index.html"><img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo"></a>
                         </div>
                     </div>
                     <div class="col-6">
@@ -636,9 +636,9 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt="Brand Logo"></a>
+                                <a href="index.html"><img src="assets/img/jevoo-bespoke.jpg" alt="Brand Logo"></a>
                             </div>
-                            <p>Corano is a premium jewelry brand that offers exquisite pieces crafted with the finest materials and attention to detail.</p>
+                            <p>Jevoo is a premium jewelry brand that offers exquisite pieces crafted with the finest materials and attention to detail.</p>
                             <div class="footer-social">
                                 <a href="#"><i class="fa fa-facebook"></i></a>
                                 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -691,7 +691,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="footer-copyright">
-                            <p>&copy; 2024 Corano. All rights reserved.</p>
+                            <p>&copy; 2024 Jevoo. All rights reserved.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
