--- a/documentation/index.html
+++ b/documentation/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Corano - Jewellery Shop eCommerce Bootstrap 5 Template</title>
+<title>Jevoo - Jewellery Shop eCommerce Bootstrap 5 Template</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -111,7 +111,7 @@ div.navbar-inner ul {
 
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="#">Corano - Jewellery Shop eCommerce Bootstrap 4 Template</a>
+    <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="#">Jevoo - Jewellery Shop eCommerce Bootstrap 4 Template</a>
       <div class="nav-collapse">
         <ul class="nav">       
           <li><a href="#theme_installation" title="Theme Installation">Template Installation</a></li> 
@@ -133,7 +133,7 @@ div.navbar-inner ul {
 <div class="container" id="documenter_content"> 
   <div id="documenter-cover">
     <div class="masthead">
-      <h1 style="text-align: center">Corano - Jewellery Shop eCommerce Bootstrap 5 Template</h1>
+      <h1 style="text-align: center">Jevoo - Jewellery Shop eCommerce Bootstrap 5 Template</h1>
       <p style="text-align: center">created: 07.05.2019</p>     
       <p class="download-info">  <a href="http://bootexperts.com/support" class="btn btn-large">24/7 Support: Send Us a message from our profile</a> </p>
     </div>
@@ -155,7 +155,7 @@ div.navbar-inner ul {
 				<ul>				   
 					<li>Open up your FTP manager and connect to your hosting</li>
 					<li>Browse to required directory (Normally public_html)</li>
-					<li>Upload the files inside <strong>corano</strong> folder.</li>						
+					<li>Upload the files inside <strong>Jevoo</strong> folder.</li>						
 				</ul>
 			</li>				
 		</ol>
