--- a/corano-dark/blog-list-right-sidebar.html
+++ b/corano-dark/blog-list-right-sidebar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corano - Jewellery Shop eCommerce Bootstrap 5 Template</title>
+    <title>Jevoo - Jewellery Shop eCommerce Bootstrap 5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewellery Online Store</p>
+                                <p>Welcome to Jevoo Jewellery Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -601,7 +601,7 @@
                                                 <a href="blog-details.html">Celebrity Daughter Opens Up About Having Her Eye Color Changed</a>
                                             </h4>
                                             <div class="blog-meta">
-                                                <p>10/04/2021 | <a href="#">Corano</a></p>
+                                                <p>10/04/2021 | <a href="#">Jevoo</a></p>
                                             </div>
                                             <p>Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu ex. Aenean posuere libero eu augue condimentum rhoncus. Praesent ornare tortor ac ante egestas hendrerit. Aliquam et metus pharetra</p>
                                             <a class="blog-read-more" href="blog-details.html">Read More...</a>
@@ -636,7 +636,7 @@
                                                 <a href="blog-details.html">Lotto Winner Offering Up Money To Any Man That Will Date Her</a>
                                             </h4>
                                             <div class="blog-meta">
-                                                <p>12/04/2021 | <a href="#">Corano</a></p>
+                                                <p>12/04/2021 | <a href="#">Jevoo</a></p>
                                             </div>
                                             <p>Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu ex. Aenean posuere libero eu augue condimentum rhoncus. Praesent ornare tortor ac ante egestas hendrerit. Aliquam et metus pharetra</p>
                                             <a class="blog-read-more" href="blog-details.html">Read More...</a>
@@ -655,7 +655,7 @@
                                                 <a href="blog-details.html">Children Left Home Alone For 4 Days In TV series Experiment</a>
                                             </h4>
                                             <div class="blog-meta">
-                                                <p>15/04/2021 | <a href="#">Corano</a></p>
+                                                <p>15/04/2021 | <a href="#">Jevoo</a></p>
                                             </div>
                                             <p>Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu ex. Aenean posuere libero eu augue condimentum rhoncus. Praesent ornare tortor ac ante egestas hendrerit. Aliquam et metus pharetra</p>
                                             <a class="blog-read-more" href="blog-details.html">Read More...</a>
@@ -674,7 +674,7 @@
                                                 <a href="blog-details.html">People are Willing Lie When Comes Money, According to Research</a>
                                             </h4>
                                             <div class="blog-meta">
-                                                <p>05/04/2021 | <a href="#">Corano</a></p>
+                                                <p>05/04/2021 | <a href="#">Jevoo</a></p>
                                             </div>
                                             <p>Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu ex. Aenean posuere libero eu augue condimentum rhoncus. Praesent ornare tortor ac ante egestas hendrerit. Aliquam et metus pharetra</p>
                                             <a class="blog-read-more" href="blog-details.html">Read More...</a>
@@ -695,7 +695,7 @@
                                                 <a href="blog-details.html">romantic Love Stories Of Hollywood’s Biggest Celebrities</a>
                                             </h4>
                                             <div class="blog-meta">
-                                                <p>02/04/2021 | <a href="#">Corano</a></p>
+                                                <p>02/04/2021 | <a href="#">Jevoo</a></p>
                                             </div>
                                             <p>Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu ex. Aenean posuere libero eu augue condimentum rhoncus. Praesent ornare tortor ac ante egestas hendrerit. Aliquam et metus pharetra</p>
                                             <a class="blog-read-more" href="blog-details.html">Read More...</a>
@@ -716,7 +716,7 @@
                                                 <a href="blog-details.html">Celebrity Daughter Opens Up About Having Her Eye Color Changed</a>
                                             </h4>
                                             <div class="blog-meta">
-                                                <p>25/03/2021 | <a href="#">Corano</a></p>
+                                                <p>25/03/2021 | <a href="#">Jevoo</a></p>
                                             </div>
                                             <p>Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu ex. Aenean posuere libero eu augue condimentum rhoncus. Praesent ornare tortor ac ante egestas hendrerit. Aliquam et metus pharetra</p>
                                             <a class="blog-read-more" href="blog-details.html">Read More...</a>
@@ -842,7 +842,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2025 <b class="text-white">Corano</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2025 <b class="text-white">Jevoo</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
                         </div>
                     </div>
                 </div>
