--- a/corano-dark/index-3.html
+++ b/corano-dark/index-3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corano - Jewellery Shop eCommerce Bootstrap 5 Template</title>
+    <title>Jevoo - Jewellery Shop eCommerce Bootstrap 5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewellery Online Store</p>
+                                <p>Welcome to Jevoo Jewellery Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -2487,7 +2487,7 @@
                                             </div>
                                             <div class="group-item-desc">
                                                 <h5 class="group-product-name"><a href="product-details.html">
-                                                        corano top exclusive jewellry</a></h5>
+                                                        Jevoo top exclusive jewellry</a></h5>
                                                 <div class="price-box">
                                                     <span class="price-regular">$20.00</span>
                                                     <span class="price-old"><del>$30.00</del></span>
@@ -2839,7 +2839,7 @@
                                             </div>
                                             <div class="group-item-desc">
                                                 <h5 class="group-product-name"><a href="product-details.html">
-                                                        corano top exclusive jewellry</a></h5>
+                                                        Jevoo top exclusive jewellry</a></h5>
                                                 <div class="price-box">
                                                     <span class="price-regular">$20.00</span>
                                                     <span class="price-old"><del>$30.00</del></span>
@@ -2923,7 +2923,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2021 | <a href="#">Corano</a></p>
+                                        <p>25/03/2021 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Celebrity Daughter Opens Up About Having Her Eye Color Changed</a>
@@ -2941,7 +2941,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2021 | <a href="#">Corano</a></p>
+                                        <p>25/03/2021 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Children Left Home Alone For 4 Days In TV series Experiment</a>
@@ -2959,7 +2959,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2021 | <a href="#">Corano</a></p>
+                                        <p>25/03/2021 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">Lotto Winner Offering Up Money To Any Man That Will Date Her</a>
@@ -2977,7 +2977,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2021 | <a href="#">Corano</a></p>
+                                        <p>25/03/2021 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">People are Willing Lie When Comes Money, According to Research</a>
@@ -2995,7 +2995,7 @@
                                 </figure>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <p>25/03/2021 | <a href="#">Corano</a></p>
+                                        <p>25/03/2021 | <a href="#">Jevoo</a></p>
                                     </div>
                                     <h5 class="blog-title">
                                         <a href="blog-details.html">romantic Love Stories Of Hollywood’s Biggest Celebrities</a>
@@ -3167,7 +3167,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2025 <b class="text-white">Corano</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2025 <b class="text-white">Jevoo</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
                         </div>
                     </div>
                 </div>
