--- a/corano-dark/index-5.html
+++ b/corano-dark/index-5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Corano - Jewellery Shop eCommerce Bootstrap 5 Template</title>
+    <title>Jevoo - Jewellery Shop eCommerce Bootstrap 5 Template</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -45,7 +45,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-6">
                             <div class="welcome-message">
-                                <p>Welcome to Corano Jewellery Online Store</p>
+                                <p>Welcome to Jevoo Jewellery Online Store</p>
                             </div>
                         </div>
                         <div class="col-lg-6 text-right">
@@ -2467,7 +2467,7 @@
                                             </div>
                                             <div class="group-item-desc">
                                                 <h5 class="group-product-name"><a href="product-details.html">
-                                                        corano top exclusive jewellry</a></h5>
+                                                        Jevoo top exclusive jewellry</a></h5>
                                                 <div class="price-box">
                                                     <span class="price-regular">$20.00</span>
                                                     <span class="price-old"><del>$30.00</del></span>
@@ -2756,7 +2756,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2025 <b class="text-white">Corano</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2025 <b class="text-white">Jevoo</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
                         </div>
                     </div>
                 </div>
