feat: Add cart functionality to draggable grid
- Introduced product information object for the Golden Ring Decor.
- Integrated global cart functionality to allow adding products to the cart from the draggable grid.

--- a/corano/index.html
+++ b/corano/index.html
@@ -2039,6 +2039,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Flip.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/draggable-grid.js"></script>
+    <script src="assets/js/cart-functionality.js"></script>
 </body>
 
 </html>
