feat: Add additional columns and items for large screens in draggable grid
- Introduced new columns and marquee items specifically for large screens (1920px and above) to enhance product visibility.
- Updated CSS to adjust animation duration and layout properties for improved performance and appearance on larger displays.

--- a/corano/index.html
+++ b/corano/index.html
@@ -536,6 +536,25 @@
                             <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
                             <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
                         </div>
+                        <!-- Additional set for large screens (1920px+) -->
+                        <!-- First column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Second column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/earring-1.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-5.png" alt="Vase Collection" /></div>
+                        </div>
+                        <!-- Third column (additional set) -->
+                        <div class="column">
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-2.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-3.png" alt="Vase Collection" /></div>
+                            <div class="marquee-item"><img src="assets/draggable-grid-public/ring-7.png" alt="Vase Collection" /></div>
+                        </div>
                     </div>
                 </div>
             </section>
